# doc_parser

./: .env.example  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_three_step_pipeline.py  003_extraction_provider.py  004_chart_enhance.py  005_add_asset_class.py
data/extraction/4ad9/4ad9ee98bb9124573ed3bdc9413a070b7924c93a51d2c018ea97f178e9a40dde/5/: extraction.json
data/extraction/9cfb/9cfbcc0ab6f8a7fb94ba3ee85bf86965c8c1102e06e848fac34a21b5745662f9/4/: extraction.json
data/extraction/ed00/ed008224655a48bb05032a90308bbb5bfb4919e713259c188a5e4660c3cc560e/3/: extraction.json
src/doc_parser/: chart_enhance.py  cli.py  config.py  db.py  extraction.py  google_drive.py  models.py  pipeline.py  storage.py  textin_client.py  watermark.py
src/doc_parser/steps/: __init__.py  step1_watermark.py  step2_parse.py  step3_extract.py
tests/: conftest.py  test_chart_enhance.py  test_cli.py  test_config.py  test_db.py  test_extraction.py  test_google_drive.py  test_models.py  test_pipeline.py  test_steps.py  test_storage.py  test_textin_client.py  test_watermark.py
