[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-parser"
version = "0.1.0"
description = "Finance report parsing pipeline — Google Drive → TextIn xParse → PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tenacity>=8.2",
    "python-dateutil>=2.8",
]

[project.scripts]
doc-parser = "doc_parser.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/doc_parser"]
